# numpy_vs_cupy_performance

./: README.md  cpu_run.py  cupy.ipynb  gpu_run.py  main.py  pyproject.toml  result.txt  run.sh  run_cpu.sh  run_gpu.sh
